# checkml

./: .gitignore  .gitmodules  CONTRIBUTOR.md  Makefile  README.md  build.sh  checkml.opam  dune  dune-project
.github/workflows/: check.yml
src/: ast_walker.ml  checkml.ml  cmdline.ml  dune  functional_purity.ml  main.ml  metric.ml  naming_clarity.ml  pattern_quality.ml  reporter.ml  scorer.ml  structural_depth.ml
test/: dune  for_let.expected  for_let.ml  ref_appl_fun.expected  ref_appl_fun.ml  ref_global.expected  ref_global.ml  ref_let.expected  ref_let.ml  ref_let_appl_fun.expected  ref_let_appl_fun.ml  while_let.expected  while_let.ml
test/bad/: example.ml
test/good/: example.ml
