opam-version: "2.0"
homepage: "https://github.com/prosyslab-classroom/checkml"
name: "checkml"
build: [
    [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
  ]
]

depends: [
    "dune" {>= "3.4"}
    "ocaml" {>= "5.1.0"}
]

synopsis: "Encourage students to follow the principles of Value-Oriented Programming"
