(rule
 (deps for_let.ml)
 (action
  (with-stdout-to
   for_let.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe for_let.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found for" for_let.output)))

(rule
 (deps while_let.ml)
 (action
  (with-stdout-to
   while_let.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe while_let.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found while" while_let.output)))

(rule
 (deps ref_global.ml)
 (action
  (with-stdout-to
   ref_global.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe ref_global.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found ref" ref_global.output)))

(rule
 (deps ref_let.ml)
 (action
  (with-stdout-to
   ref_let.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe ref_let.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found ref" ref_let.output)))

(rule
 (deps ref_appl_fun.ml)
 (action
  (with-stdout-to
   ref_appl_fun.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe ref_appl_fun.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found ref" ref_appl_fun.output)))

(rule
 (deps ref_let_appl_fun.ml)
 (action
  (with-stdout-to
   ref_let_appl_fun.output
   (with-accepted-exit-codes
    1
    (run ../src/checkml.exe ref_let_appl_fun.ml)))))

(rule
 (alias runtest)
 (action
  (run grep -q "found ref" ref_let_appl_fun.output)))
